fix(app): blog line heights + spacing

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,8 +5,7 @@
 @layer base {
   @font-face {
     font-family: 'Monaspace Argon Var';
-    src:
-      url('/fonts/monaspace-argon-var-regular.woff2') format('woff2'),
+    src: url('/fonts/monaspace-argon-var-regular.woff2') format('woff2'),
       url('/fonts/monaspace-argon-var-regular.woff') format('woff');
     font-weight: normal;
     font-style: normal;
@@ -15,8 +14,7 @@
 
   @font-face {
     font-family: 'Poppins Regular';
-    src:
-      url('/fonts/poppins-regular.woff2') format('woff2'),
+    src: url('/fonts/poppins-regular.woff2') format('woff2'),
       url('/fonts/poppins-regular.woff') format('woff');
     font-weight: normal;
     font-style: normal;
